--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,15 +53,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+   uses-material-design: true
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-#  uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
    assets:
      - assets/images/
+     - assets/images/c7.jpg
+     - assets/images/Splashs.jpg
+     - assets/images/undraw_city_life_gnpr 1.png
+     - assets/images/Layout.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
