--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
   persistent_bottom_nav_bar: ^5.0.2
+  provider: ^6.1.1
+  file_picker: ^6.1.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
