--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
      - assets/images/Splashs.jpg
      - assets/images/undraw_city_life_gnpr 1.png
      - assets/images/Layout.png
+     - assets/images/contactus.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
