--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.1
   file_picker: ^6.1.1
   image_picker: ^1.0.7
+  google_mlkit_text_recognition: ^0.13.0
 
 dev_dependencies:
   flutter_test:
