--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   file_picker: ^6.1.1
   image_picker: ^1.0.7
   google_mlkit_text_recognition: ^0.13.0
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
