--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.3
   get: ^4.6.6
+  firebase_core: ^2.30.1
+  cloud_firestore: ^4.17.2
+  firebase_storage: ^11.7.4
 
 dev_dependencies:
   flutter_test:
