--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
   firebase_storage: ^11.7.4
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
