--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cloud_firestore: ^4.17.2
   firebase_storage: ^11.7.4
   path_provider: ^2.1.3
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
