--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_storage: ^11.7.4
   path_provider: ^2.1.3
   get_storage: ^2.1.1
+  google_maps_flutter: ^2.6.1
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
