--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,10 @@ dependencies:
   firebase_storage: ^11.7.4
   path_provider: ^2.1.3
   get_storage: ^2.1.1
-  google_maps_flutter: ^2.6.1
-  location: ^6.0.2
+  carousel_slider: ^4.2.1
+  lottie: ^3.1.1
+  flutter_rating_bar: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +79,7 @@ flutter:
      - assets/images/undraw_city_life_gnpr 1.png
      - assets/images/Layout.png
      - assets/images/contactus.jpg
+     - assets/images/rating.jpg
      - assets/temp/
      - assets/temp/zkbowner.jpeg
      - assets/temp/zkbowner.jpeg
